Fix to SP01 image spacing.

--- a/#dev/scss/blocks/SP01.scss
+++ b/#dev/scss/blocks/SP01.scss
@@ -1,3 +1,17 @@
 .block-SP01 {
 	padding: 30px 0;
 }
+
+.SP-content {
+	img {
+		margin: 20px 0;
+	}
+
+	img[align="right"] {
+		margin-left: 20px;
+	}
+
+	img[align="left"] {
+		margin-right: 20px;
+	}
+}
